--- a/index.html
+++ b/index.html
@@ -676,6 +676,25 @@
 						</div>
 						<!-- Speaker end -->
 					</div>
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/vadim.jpg" alt="Вадим Марьин" />
+								<ul class="social-links">
+									<li><a href="mailto:vadimamarin@gmail.com"><i class="fa fa-envelope-open"></i></a></li>
+									<li><a href="https://facebook.com/vadimamarin" target="_blank"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="https://twitter.com/vadimamarin" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="index.html#">Вадим Марьин</a></h3>
+								<p class="ts-speaker-designation">Лайфхакер</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
 					<!-- Speaker Col 5 end -->
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
@@ -694,73 +713,6 @@
 						<!-- Speaker end -->
 					</div>
 					<!-- Speaker Col 1 end -->
-
-					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-						<!--<div class="ts-speaker transparent">-->
-							<!--<div class="ts-speaker-image">-->
-								<!--<img class="img-responsive" src="images/speakers/speaker6.jpg" alt=""/>-->
-								<!--<ul class="social-links">-->
-									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-								<!--</ul>-->
-							<!--</div>-->
-							<!--&lt;!&ndash;Image end &ndash;&gt;-->
-							<!--<div class="ts-speaker-info">-->
-								<!--<h3 class="ts-speaker-name"><a href="index.html#">Romeo Gunnarsson</a></h3>-->
-								<!--<p class="ts-speaker-designation">iOS Developer</p>-->
-							<!--</div>-->
-							<!--&lt;!&ndash; Info end &ndash;&gt;-->
-						<!--</div>-->
-						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-					<!--</div>-->
-					<!-- Speaker Col 2 end -->
-
-					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-						<!--<div class="ts-speaker transparent">-->
-							<!--<div class="ts-speaker-image">-->
-								<!--<img class="img-responsive" src="images/speakers/speaker7.jpg" alt=""/>-->
-								<!--<ul class="social-links">-->
-									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-								<!--</ul>-->
-							<!--</div>-->
-							<!--&lt;!&ndash;Image end &ndash;&gt;-->
-							<!--<div class="ts-speaker-info">-->
-								<!--<h3 class="ts-speaker-name"><a href="index.html#">Greta Nyberg</a></h3>-->
-								<!--<p class="ts-speaker-designation">Founder of Chipper</p>-->
-							<!--</div>-->
-							<!--&lt;!&ndash; Info end &ndash;&gt;-->
-						<!--</div>-->
-						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Speaker Col 3 end &ndash;&gt;-->
-
-					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-						<!--<div class="ts-speaker transparent">-->
-							<!--<div class="ts-speaker-image">-->
-								<!--<img class="img-responsive" src="images/speakers/speaker8.jpg" alt=""/>-->
-								<!--<ul class="social-links">-->
-									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-								<!--</ul>-->
-							<!--</div>-->
-							<!--&lt;!&ndash;Image end &ndash;&gt;-->
-							<!--<div class="ts-speaker-info">-->
-								<!--<h3 class="ts-speaker-name"><a href="index.html#">Mattias Berglund</a></h3>-->
-								<!--<p class="ts-speaker-designation">It Consultant</p>-->
-							<!--</div>-->
-							<!--&lt;!&ndash; Info end &ndash;&gt;-->
-						<!--</div>-->
-						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-					<!--</div>-->
-					<!-- Speaker Col 4 end -->
-
 				</div>
 				<!-- Content row 2 end -->
 
