--- a/index.html
+++ b/index.html
@@ -698,21 +698,52 @@
 					<!-- Speaker Col 5 end -->
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
-							<div class="ts-speaker-image ts-speaker-image--add">
-								<a href="mailto:frontendsu@gmail.com?subject=Доклад">
-									<img class="img-responsive" src="images/speakers/add.png" alt="add speaker"/>
-								</a>
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/ermakov.jpg" alt="Денис Ермаков" />
+								<ul class="social-links">
+									<li>
+										<a href="https://vk.com/errmakov" target="_blank">
+											<i class="fa fa-vk"></i>
+										</a>
+									</li>
+								</ul>
 							</div>
 							<!--Image end -->
 							<div class="ts-speaker-info">
-								<h3 class="ts-speaker-name"><a href="mailto:frontendsu@gmail.com?subject=Доклад">Хочу стать</a></h3>
-								<p class="ts-speaker-designation">докладчиком!</p>
+								<h3 class="ts-speaker-name">
+									<a href="index.html#">Денис Ермаков</a>
+								</h3>
+								<p class="ts-speaker-designation">Веблайм</p>
 							</div>
 							<!-- Info end -->
 						</div>
 						<!-- Speaker end -->
 					</div>
-					<!-- Speaker Col 1 end -->
+					<!-- Speaker Col 6 end -->
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/ohrimenko.jpg" alt="Алексей Охрименко" />
+								<ul class="social-links">
+									<li>
+										<a href="https://twitter.com/Ai_boy" target="_blank">
+											<i class="fa fa-twitter"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name">
+									<a href="index.html#">Алексей Охрименко</a>
+								</h3>
+								<p class="ts-speaker-designation">IPONWEB</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 6 end -->
 				</div>
 				<!-- Content row 2 end -->
 
