--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 											<div class="schedule-slot-info-content">
 												<h3 class="schedule-slot-title">Веб-сокеты в Angular-приложениях</h3>
 												<h4 class="schedule-slot-speaker-name">Алексей Синдюков</h4>
-												<p class="schedule-slot-desc">Что такое веб-сокеты и когда следует их использовать? Как правильно организовать работу Angular-приложения с веб-сокетами. WebSocket RPC</p>
+												<p class="schedule-slot-desc">Что такое веб-сокеты и когда следует их использовать? Как правильно организовать работу Angular-приложения с веб-сокетами. WebSocket RPC.</p>
 											</div>
 											<!--Info content end -->
 										</div>
